--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">Hi, I'm <span>NUURKA</span></h1>
+                <h1 class="hero-title">Hi, I'm <span>NUUR!YE</span></h1>
                 <h2 class="hero-subtitle">Systems & Web Developer</h2>
                 <p class="hero-description">I create beautiful, functional websites and robust systems with clean, efficient code.</p>
                 <div class="hero-buttons">
